fixed all issues with minimal contrast requirement tag

--- a/frontend/src/pages/PGCJoined.css
+++ b/frontend/src/pages/PGCJoined.css
@@ -134,7 +134,7 @@
   }
   
   .btn-primary {
-    background-color: #7a9b7e;
+    background-color: #465D4A;
     color: white;
     margin-bottom: 0.75rem;
   }
@@ -145,7 +145,7 @@
 
   .btn-off {
     background-color: rgba(53, 53, 53, 0.384);
-    color: black;
+    color: white;
     margin-bottom: 0.75rem;
     }
   
