--- a/frontend/src/pages/Pins.css
+++ b/frontend/src/pages/Pins.css
@@ -77,7 +77,7 @@
   padding: 8px;
   align-items: center;
   justify-content: center;
-  background-color: #9ca3af;
+  background-color: #595959;
   color: white;
   border-radius: 10px;
   border: hidden;
